<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:onClick="open_employee_healthcare_activity"
                        android:id="@+id/imgEmployeeHealthcare"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_employee_healthcare" />

                    <TextView
                        android:id="@+id/txtEmployeeHealthcare"
                        android:layout_width="match_parent"
                        android:layout_height="21dp"
                        android:background="#DBA2ED"
                        android:gravity="center"
                        android:text="@string/title_healthcare"
                        android:textSize="16sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:onClick="open_employee_healthcare_activity"
                        android:id="@+id/imgEmployeeeSalary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_employee_salary" />

                    <TextView
                        android:id="@+id/txtEmployeeSalary"
                        android:layout_width="match_parent"
                        android:layout_height="21dp"
                        android:background="#98DBE6"
                        android:gravity="center"
                        android:text="@string/title_salary"
                        android:textSize="16sp"/>
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:onClick="open_employee_healthcare_activity"
                        android:id="@+id/imgEmployeeAttendance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_employee_attendance" />

                    <TextView
                        android:id="@+id/txtEmployeeAttendance"
                        android:layout_width="match_parent"
                        android:layout_height="21dp"
                        android:background="#EFA89C"
                        android:gravity="center"
                        android:text="@string/title_attendance"
                        android:textSize="16sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:onClick="open_employee_healthcare_activity"
                        android:id="@+id/imgEmployeeeBonus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_employee_bonus" />

                    <TextView
                        android:id="@+id/txtEmployeeBonus"
                        android:layout_width="match_parent"
                        android:layout_height="21dp"
                        android:background="#FFE947"
                        android:gravity="center"
                        android:text="@string/title_bonus"
                        android:textSize="16sp" />
                </LinearLayout>
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:onClick="open_employee_healthcare_activity"
                        android:id="@+id/imgEmployeeDocument"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_employee_document" />

                    <TextView
                        android:id="@+id/txtEmployeeDocument"
                        android:layout_width="match_parent"
                        android:layout_height="21dp"
                        android:background="#B0F068"
                        android:gravity="center"
                        android:text="@string/title_document"
                        android:textSize="16sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:onClick="open_employee_healthcare_activity"
                        android:id="@+id/imgEmployeeeInformation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_employee_information" />

                    <TextView
                        android:id="@+id/txtEmployeeeInformation"
                        android:layout_width="match_parent"
                        android:layout_height="21dp"
                        android:background="#E58BF8"
                        android:gravity="center"
                        android:text="@string/title_information"
                        android:textSize="16sp" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:onClick="open_employee_healthcare_activity"
                        android:id="@+id/img"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/icon_employee_change" />

                    <TextView
                        android:id="@+id/txt"
                        android:layout_width="match_parent"
                        android:layout_height="21dp"
                        android:background="#FBE08D"
                        android:gravity="center"
                        android:text="@string/title_document"
                        android:textSize="16sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:onClick="open_employee_healthcare_activity"
                        android:id="@+id/img1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/icon_employee_check" />

                    <TextView
                        android:id="@+id/txt1"
                        android:layout_width="match_parent"
                        android:layout_height="21dp"
                        android:background="#F65C2C"
                        android:gravity="center"
                        android:text="@string/title_information"
                        android:textSize="16sp" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:onClick="open_employee_healthcare_activity"
                        android:id="@+id/img2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/icon_employee_team" />

                    <TextView
                        android:id="@+id/txt2"
                        android:layout_width="match_parent"
                        android:layout_height="21dp"
                        android:background="#A989E7"
                        android:gravity="center"
                        android:text="@string/title_document"
                        android:textSize="16sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:onClick="open_employee_healthcare_activity"
                        android:id="@+id/img3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/icon_employee_receipt" />

                    <TextView
                        android:id="@+id/txt3"
                        android:layout_width="match_parent"
                        android:layout_height="21dp"
                        android:background="#7588D3"
                        android:gravity="center"
                        android:text="@string/title_information"
                        android:textSize="16sp" />
                </LinearLayout>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:onClick="open_employee_healthcare_activity"
                        android:id="@+id/img4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_employee_document" />

                    <TextView
                        android:id="@+id/txt4"
                        android:layout_width="match_parent"
                        android:layout_height="21dp"
                        android:background="#B0F068"
                        android:gravity="center"
                        android:text="@string/title_document"
                        android:textSize="16sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:onClick="open_employee_healthcare_activity"
                        android:id="@+id/img5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_employee_information" />

                    <TextView
                        android:id="@+id/txt5"
                        android:layout_width="match_parent"
                        android:layout_height="21dp"
                        android:background="#E58BF8"
                        android:gravity="center"
                        android:text="@string/title_information"
                        android:textSize="16sp" />
                </LinearLayout>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:onClick="open_employee_healthcare_activity"
                        android:id="@+id/img6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_employee_document" />

                    <TextView
                        android:id="@+id/txt6"
                        android:layout_width="match_parent"
                        android:layout_height="21dp"
                        android:background="#B0F068"
                        android:gravity="center"
                        android:text="@string/title_document"
                        android:textSize="16sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:onClick="open_employee_healthcare_activity"
                        android:id="@+id/img7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_employee_information" />

                    <TextView
                        android:id="@+id/txt7"
                        android:layout_width="match_parent"
                        android:layout_height="21dp"
                        android:background="#E58BF8"
                        android:gravity="center"
                        android:text="@string/title_information"
                        android:textSize="16sp" />
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>
